# study-fastapi

./: .gitignore  main.py  pyproject.toml  testedb.sqlite
study/: config.py  criar_tabelas.py  db.sqlite  rotas.py
study/controllers/: papeis_control.py
study/models/: papel.py
study_fastapi/: criar_tabelas.py  db.sqlite  main.py  rotas.py
study_fastapi/controllers/: papeis_control.py
study_fastapi/models/: papel.py
tests/: conftest.py  testedb.sqlite
tests/api/: test_papeis.py  test_root.py  testedb.sqlite
tests/utils/: papeis.py
